charts/init/ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: miniblog
  name: ingress-controller
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:017820660901:certificate/afb53aea-7747-4194-87cd-a20aedd41211
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - host: blog.ghtjr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-front-service
                port:
                  number: 80
    - host: keycloak.ghtjr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
    - host: api.ghtjr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 4040
    - host: grafana.ghtjr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
    - host: musical.ghtjr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: musical-front-service
                port:
                  number: 80
